--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-jasmine2-phantomjs": "^0.2.0",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.2.0",
     "gulp-shell": "^0.4.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.2.0",
